--- a/configure.ac
+++ b/configure.ac
@@ -22,11 +22,12 @@ fi
 AX_BOOST_BASE([1.54],,AC_MSG_ERROR([libboost_base not found]))
 AX_BOOST_DATE_TIME([1.54],,AC_MSG_ERROR([libboost_date_time not found]))
 AX_BOOST_SYSTEM([1.54],,AC_MSG_ERROR([libboost_system not found]))
-AX_BOOST_FILESYSTEM([1.54],,AC_MSG_ERROR([libboost_filesystem not found]))
 AX_BOOST_IOSTREAMS([1.54],,AC_MSG_ERROR([libboost_iostreams not found]))
 AX_BOOST_PROGRAM_OPTIONS([1.54],,AC_MSG_ERROR([libboost_options not found]))
 AX_BOOST_THREAD([1.54],,AC_MSG_ERROR([libboost_thread not found]))
 AX_BOOST_UNIT_TEST_FRAMEWORK([1.54],,AC_MSG_ERROR([libboost_unit_test_framework not found]))
+AM_CONDITIONAL([USE_BOOST_THREAD], [test "x$HAVE_BOOST_THREAD" = x1])
+AM_CONDITIONAL([USE_BOOST_UNIT_TEST_FRAMEWORK], [test "x$HAVE_BOOST_UNIT_TEST_FRAMEWORK" = x1])
 AM_CONDITIONAL([HAVE_CPPCHECK], [test -n "$CPPCHECK"])
 AX_CHECK_LIBRARY([LIBBZ2], [bzlib.h], [bz2], [],
                  [AC_MSG_WARN([libbz2 not found - compressed files not supported])])
